# simple-crypto

./: CMakeLists.txt  README.md  md5.c  simplecrypto.h  simplemd5.c  simplemd5.h  tea.c
src/: ltea.c  test.lua
